<resources>
    <string name="app_name">multiprocess_keystore</string>
    <string name="action_settings">Settings</string>
    <string name="unbind">Unbind</string>
    <string name="bind">Bind</string>
    <string name="start_reading_random_interval">Start Reading</string>
    <string name="stop_setting">Stop Setting</string>
    <string name="stop_reading_random_interval">Stop Reading</string>
    <string name="start_setting">Start Setting</string>
    <string name="clear_console">Clear Console</string>
</resources>
