<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/content_test"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TestActivity"
    tools:showIn="@layout/activity_test">
    <ScrollView
        android:id="@+id/console_scroll_view"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/console_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
    <LinearLayout
        android:id="@id/buttons"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:text="@string/bind"
                android:onClick="onBindClicked"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/unbind"
                android:onClick="onUnbindClicked"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:text="@string/start_reading_random_interval"
                android:onClick="onStartReadingClicked"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/start_setting"
                android:onClick="onStartSettingClicked"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <Button
                android:text="@string/stop_reading_random_interval"
                android:onClick="onStopReadingClicked"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <Button
                android:text="@string/stop_setting"
                android:onClick="onStopSettingClicked"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:text="@string/clear_console"
            android:onClick="onClearConsoleClicked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
